# frida-net

./: .gitignore  .gitmodules  README.md  configure.bat  make.bat  meson.build
src/: Frida.NET.csproj  Frida.NET.sln  meson.build
src/Frida.NET/: Frida.NET.csproj  meson.build
src/Frida.NET.Bindings/: Frida.NET.Bindings.csproj  meson.build
src/Frida.NET.Runtime/: Frida.NET.Runtime.csproj  meson.build
tools/girtool/: meson.build
